
[metadata]
name = pyglm-typing
version = 0.1.1
author = Erik Soma
author_email = stillusingirc@gmail.com
url = https://github.com/esoma/pyglm-typing
description = Type stubs for PyGLM
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
package_dir =
     = src
packages = glm-stubs, glm_typing
install_requires =
    pyglm>=2.5

[flake8]
ignore = E, F, W, T
    E261 # at least two spaces before inline comment
select =
    F401 # module imported but unused
    E111 # indentation is not a multiple of four
    E2   # whitespace
    E7   # statements
    W1   # indentation warning
    W2   # whitespace warning
    W3   # blank line warning
    W503 # line break before binary operator
    W505 # doc line too long
    T100 # Fixme found
    T101 # Todo found
    T102 # XXX found
